--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
 asgiref==3.7.2
+crispy-bootstrap5==0.6
+dj-database-url==2.1.0
+dj-email-url==1.0.6
 Django==4.0.10
+django-cache-url==3.4.4
+django-crispy-forms==1.13.0
+environs==9.3.5
 gunicorn==20.1.0
+marshmallow==3.20.1
+packaging==23.2
+psycopg2==2.9.3
+python-dotenv==1.0.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
 whitenoise==5.3.0
